<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/general_header">

        <ListPreference
            app:defaultValue="double"
            app:entries="@array/actions_array"
            app:entryValues="@array/actions_array"
            app:key="double"
            app:title="@string/double_tap_label"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="triple"
            app:entries="@array/actions_array"
            app:entryValues="@array/actions_array"
            app:key="triple"
            app:title="@string/triple_tap_label"
            app:useSimpleSummaryProvider="true" />

        <Preference
            app:key="sensitivity"
            app:title="@string/sensitivity_slider_label"
            app:summary="Medium"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header">

        <Preference
            app:key="accessibilitySettings"
            app:title="Accessibility Settings"/>

        <Preference
            app:key="About"
            app:title="About BackTap"/>

    </PreferenceCategory>

</PreferenceScreen>